src/objects/TRAK_Sandbox_Refresh_Log__c.object
<CustomObject>
    <fields>
        <fullName>Approval_Status_Flag__c</fullName>
        <formula>Case(Text(Approval_Status__c),&quot;Open&quot;, IMAGE(IF(ISPICKVAL($UserRole.PortalType,&apos;Partner&apos;),&apos;/releasetracker&apos;,&apos;&apos;)&amp;&apos;/img/msg_icons/info16.png&apos;,&apos;Blue&apos;), 
&quot;Pending&quot;, IMAGE(IF(ISPICKVAL($UserRole.PortalType,&apos;Partner&apos;),&apos;/releasetracker&apos;,&apos;&apos;)&amp;&apos;/img/msg_icons/warning16.png&apos;,&apos;Blue&apos;),
&quot;Approved&quot;, IMAGE(IF(ISPICKVAL($UserRole.PortalType,&apos;Partner&apos;),&apos;/releasetracker&apos;,&apos;&apos;)&amp;&apos;/img/msg_icons/confirm16.png&apos;,&apos;Blue&apos;),
&quot;Rejected&quot;, IMAGE(IF(ISPICKVAL($UserRole.PortalType,&apos;Partner&apos;),&apos;/releasetracker&apos;,&apos;&apos;)&amp;&apos;/img/msg_icons/error16.png&apos;,&apos;Blue&apos;),
IMAGE(IF(ISPICKVAL($UserRole.PortalType,&apos;Partner&apos;),&apos;/releasetracker&apos;,&apos;&apos;)&amp;&apos;/img/msg_icons/info16.png&apos;,&apos;Blue&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approval Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sandbox_Refresh_Logs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Completed ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Environment__c</fullName>
        <label>Environment</label>
        <referenceTo>TRAK_Environment__c</referenceTo>
        <relationshipLabel>Sandbox Refresh Logs</relationshipLabel>
        <relationshipName>Sandbox_Refresh_Logs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Refresh_Date__c</fullName>
        <label>Refresh Date</label>
        <type>DateTime</type>
    </fields>
    <label>Sandbox Refresh Log</label>
    <nameField>
        <displayFormat>R-{0000}</displayFormat>
        <label>Log ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sandbox Refresh Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>